log
Thu Mar 26 06:56:10 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
270ec92
Thu Mar 26 07:10:43 PM UTC 2026: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:96:14: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   96 |         list -> prev = list -> next;
      |              ^~
list.c:96:29: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   96 |         list -> prev = list -> next;
      |                             ^~
list.c:97:32: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   97 |         list -> current = list -> prev;
      |                                ^~
55dc60b
Thu Mar 26 07:13:08 PM UTC 2026: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
c671383
Thu Mar 26 07:15:46 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
5b71696
Thu Mar 26 07:19:50 PM UTC 2026: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
74b8682
Thu Mar 26 07:24:11 PM UTC 2026: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:99:29: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   99 |         list -> head = list -> next;
      |                             ^~
8c4b739
Thu Mar 26 07:24:40 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
5daf0ae
Thu Mar 26 07:29:27 PM UTC 2026: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:106:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
  106 |     if(list -> current = list -> tail){
      |        ^~~~
cc1: all warnings being treated as errors
1496dd8
Thu Mar 26 07:30:04 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
9f20fd4
Thu Mar 26 07:32:03 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
ac3d1bd
